und-747-Logo collapse issue on all templates

--- a/stories/Components/Navigationcomponents/Mainnavigation/CountrySiteHeader/CountrySiteHeader.scss
+++ b/stories/Components/Navigationcomponents/Mainnavigation/CountrySiteHeader/CountrySiteHeader.scss
@@ -55,6 +55,7 @@
           height: 4.6875rem;
           width: auto;
         }
+        @extend %logo;
       }
     }
   }
