--- a/stories/Components/Navigationcomponents/Mainnavigation/GlobalHeader/GlobalHeader.scss
+++ b/stories/Components/Navigationcomponents/Mainnavigation/GlobalHeader/GlobalHeader.scss
@@ -94,7 +94,8 @@
       .logo {
         @include devicebreak(mediumonlytab) {
           height: 4.6875rem;
-        }
+        } 
+        @extend %logo;
       }
     }
   }
