--- a/stories/assets/scss/_mixins.scss
+++ b/stories/assets/scss/_mixins.scss
@@ -425,4 +425,13 @@
     display: block;
   }
 }
+%logo{
+  @include transition(all .4s cubic-bezier(.64,.05,.35,1.05));
+  @include devicebreak(xlarge) {
+    height: 122px;
+    &.scrolled{
+      height: 7.1875rem;
+    }
+  }
+}
 /* placehoder start */
